Fixed warnings Changed so server only logs all different changes and errors in log file